--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -2,15 +2,49 @@
     <html>
         <head>
             <title>Django Girls blog</title>
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
             <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
             <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+            <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
         </head>
+        <script type="text/javascript">
+            footer {
+            background-color: #f2f2f2;
+            padding: 25px;
+            }
+        </script>
         <body>
             <div class="page-header">
-                <h1><a href="/">Aja cambiar</a></h1>
+                <h1>"Cursos"</h1>
             </div>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">Titulo Menu</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Opcion 1</a></li>
+        <li><a href="#">Opcion 2</a></li> 
+        <li><a href="#">Opcion 3</a></li> 
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
             <div class="content container">
                 <div class="row">
@@ -21,4 +55,9 @@
                 </div>
             </div>
         </body>
-    </html>
+
+
+<footer class="container-fluid text-center">
+  <p>Footer</p>
+</footer>
+</html>
