--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 
 {% extends 'base.html' %}
 
@@ -13,9 +23,9 @@
 <table class="table table-striped">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Time start</th>
-        <th>action</th>
+        <th>Nombre</th>
+        <th>Algo</th>
+        <th>Opciones</th>
       </tr>
     </thead>
     <tbody>
@@ -31,12 +41,6 @@
         </tr>
     {% endfor %}
     
-
-      <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
       
     </tbody>
   </table>
@@ -45,3 +49,9 @@
 
 
  {% endblock %}
+
+
+
+<footer class="container-fluid text-center">
+  <p>Footer</p>
+</footer>
