--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -7,7 +7,7 @@
             <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
             <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-            <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+            <link href="C:\Users\Elide\CRUD\platzi\courses\templates\bootstrap.css" rel='stylesheet' type='text/css' />
         </head>
         <script type="text/javascript">
             footer {
@@ -45,8 +45,7 @@
   </div>
 </nav>
 
-
-            <div class="content container">
+           <div class="content container">
                 <div class="row">
                     <div class="col-md-8">
                     {% block content %}
