--- a/courses/templates/bootstrap.css
+++ b/courses/templates/bootstrap.css
@@ -20,3 +20,27 @@ border-color: #E7E7E7;
   margin: 40px 0 20px;
   border-bottom: 1px solid none;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
+}
